Fix broken style in tutorials popup

--- a/api/templates/default/def_tutorials.less
+++ b/api/templates/default/def_tutorials.less
@@ -40,6 +40,7 @@ span.egw_tutorial_title {
 	background-repeat: no-repeat;
 	background-position: -2px;
 	border-radius: 5px;
+	display: block !important;
 }
 [id^="egw_tutorial_"][id$="_play"].egw_tutorial_playBtn,
 #home-tutorial_play.egw_tutorial_playBtn{
